2015-08-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/profile.c (SetImageProfile): Avoid crash given NULL
	profile pointer.  Resolution and patch by Federico Larumbe.

2015-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/attribute.c (GenerateEXIFAttribute): Fix logic problem
	while validating EXIF GPS_OFFSET.  Problem reported by Federico
	Larumbe.

2015-07-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/miff.c (ReadMIFFImage): Applied fix
	(http://hg.code.sf.net/u/zacmorris/graphicsmagick/rev/edcc4c184b42)
	by Zac Morris to detect buffer overrun while reading zip
	compressed data.
	(ReadMIFFImage): Fixed some memory leaks which were occuring when
	an exception was thrown from zip-compressed data reader.

2015-07-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WritePTIFImage): Fix SourceForge issue #269
	"Convert creates SubfileType 0x2 instead of 0x1".  From looking at
	the code, this is a regression since the time support for the page
	subfile type was added (probably via changeset 11831
	(037eef0f67f2) on 2007-08-17).

2015-07-19  Jaroslav Fojtik  <JaFojtik@seznam.cz>

	* dcraw/dcraw.c: Fixed bad define WIN32.

2015-07-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt, www/Hg.rst, www/index.rst: Applied English bugs patch
	by Amadu Jalloh.

	* dcraw/dcraw.c: Add a port replacement for strnlen().

2015-07-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* wand/magick_wand.h: The declaration for MagickGetImageGravity()
	was missing.  Resolves SourceForge bug #308 magick_wand.h misses
	declaration of MagickGetImageGravity.

2015-07-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* dcraw: Update bundled dcraw to release 9.26.0.

	* png: Updated bundled libpng to release 1.6.17.

	* lcms: Update bundled lcms2 to release 2.7.

2015-07-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Brought up to date with changes thus far since last
	release.
