@@ -38,6 +38,9 @@
 <p>2015-08-10  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/attribute.c (GenerateEXIFAttribute): Verify that entry
+pointer is within the metadata buffer in order to avoid buffer
+overflow.  Resolution and patch by Federico Larumbe.</li>
 <li>magick/profile.c (SetImageProfile): Avoid crash given NULL
 profile pointer.  Resolution and patch by Federico Larumbe.</li>
 </ul>
